<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
            android:enabled="true"
            android:icon="@drawable/ic_baseline_whatshot_24"
            android:shortcutId="start_hvac"
            android:shortcutLongLabel="@string/start_hvac_shortcut_long"
            android:shortcutShortLabel="@string/start_hvac_shortcut">
        <intent
                android:action="StartHVAC"
                android:targetClass="at.sunilson.vehicle.presentation.hvacBroadcastReciever.HvacBroadCastReciever"
                android:targetPackage="at.sunilson.zoe" />
    </shortcut>

    <shortcut
            android:enabled="true"
            android:icon="@drawable/ic_baseline_trending_up_24"
            android:shortcutId="charge_statistics"
            android:shortcutLongLabel="@string/show_climate_statistics_shortcut_long"
            android:shortcutShortLabel="@string/show_climate_statistics_shortcut">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="zoe://vehicle_overview/charge_statistics"
                android:targetClass="at.sunilson.zoe.MainActivity"
                android:targetPackage="at.sunilson.zoe" />
    </shortcut>

    <shortcut
            android:enabled="true"
            android:icon="@drawable/ic_baseline_map_24"
            android:shortcutId="location"
            android:shortcutLongLabel="@string/map_shortcut_long"
            android:shortcutShortLabel="@string/map_shortcut">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="zoe://vehicle_overview/vehicle_location"
                android:targetClass="at.sunilson.zoe.MainActivity"
                android:targetPackage="at.sunilson.zoe" />
    </shortcut>
</shortcuts>